# hardware-perfcounter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
cmake/: hpc_cc_binary.cmake  hpc_cc_library.cmake  hpc_utils.cmake
examples/: CMakeLists.txt  adreno_a6xx_c_example.c  adreno_c_example.c  adreno_common_c_example.c  mali_common_c_example.c  mali_g77_c_example.c  mali_print_info.c  mali_valhall_c_example.c
hpc/gpu/: allocation_callback.h  error_code.h
hpc/gpu/adreno/: CMakeLists.txt  a5xx.c  a5xx.h  a6xx.c  a6xx.h  common.c  common.h  context.c  context.h  driver_ioctl.c  driver_ioctl.h
hpc/gpu/mali/: CMakeLists.txt  common.c  common.h  context.c  context.h  driver_ioctl.c  driver_ioctl.h  product.c  product.h
include/hpc/gpu/: base_utilities.h
include/hpc/gpu/adreno/: a5xx.h  a6xx.h  common.h
include/hpc/gpu/mali/: bifrost.h  common.h  valhall.h
lib/gpu/adreno/: CMakeLists.txt  a5xx.c  a6xx.c  common.c  context.c  context.h  driver_ioctl.c  driver_ioctl.h
lib/gpu/mali/: CMakeLists.txt  bifrost.c  common.c  context.c  context.h  driver_ioctl.c  driver_ioctl.h  valhall.c
scripts/: CMakeLists.txt  generate_adreno_definitions.py  generate_mali_definitions.py  mali_gpu_database.xml
